# bisect

./: Cargo.toml  README.md
doc/: numbered_lines.txt  random-words.txt
src/: .main.rs.rustfmt  main.rs
