[package]
name = "bisect"
version = "0.2.0"
authors = ["Judson <nyarly@gmail.com>"]
edition = "2018"
description = "Bisect search stdin based on a bitstring pattern"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/nyarly/bisect"

[dependencies]
clap = "^2.32.0"
failure = "^0.1.5"
